@@ -37,6 +37,11 @@ concatenation of the data fed to it so far using the :meth:`digest` or
 
 .. note::
 
+   For better multithreading performance, the Python GIL is released for
+   strings of more than 2047 bytes at object creation or on update.
+
+.. note::
+
    Feeding string objects is to :meth:`update` is not supported, as hashes work
    on bytes, not on characters.
 
